SOE-3276: Banner overlay: button in wysiwyg not responsive scaling codeclimate fixes

--- a/scss/components/_soe_beans.scss
+++ b/scss/components/_soe_beans.scss
@@ -349,6 +349,7 @@
 
       @include breakpoint-max(medium) {
         line-height: 1.2em;
+        font-size: .9em;
       }
 
       a {
@@ -362,6 +363,7 @@
         }
       }
     }
+
   }
 
   &.block {
